@@ -1,5 +1,6 @@
 Search API Solr search 1.0, dev (xx/xx/xxxx):
 ---------------------------------------------
+- #1095956 by drunken monkey: Add Solr-specific index alter hook.
 
 Search API Solr search 1.0, Beta 2 (03/04/2011):
 ------------------------------------------------
